--- a/back_end/package.json
+++ b/back_end/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -18,7 +17,6 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
-    "serve-static": "^1.15.0",
-    "twilio": "^5.3.5"
+    "serve-static": "^1.15.0"
   }
 }
