--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bull-jungle-orders-v2",
+  "name": "bbweb-iframe",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
